--- a/08MIAR_Proyecto_práctico.ipynb
+++ b/08MIAR_Proyecto_práctico.ipynb
@@ -232,7 +232,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 5,
       "metadata": {
         "id": "j3eRhgI-Gb2a"
       },
@@ -245,7 +245,7 @@
         "import gym\n",
         "\n",
         "from tensorflow.keras.models import Sequential\n",
-        "from tensorflow.keras.layers import Dense, Activation, Flatten, Convolution2D, Permute\n",
+        "from tensorflow.keras.layers import Dense, Activation, GlobalAveragePooling2D, Flatten, Convolution2D, Permute\n",
         "from tensorflow.keras.optimizers import Adam\n",
         "import tensorflow.keras.backend as K\n",
         "\n",
@@ -268,11 +268,20 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
         "id": "jwOE6I_KGb2a"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Numero de acciones disponibles: 6\n",
+            "Formato de las observaciones: Box(0, 255, (210, 160, 3), uint8)\n"
+          ]
+        }
+      ],
       "source": [
         "INPUT_SHAPE = (84, 84)\n",
         "WINDOW_LENGTH = 4\n",
@@ -291,7 +300,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {
         "id": "9jGEZUcpGb2a"
       },
@@ -326,12 +335,141 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 7,
       "metadata": {
         "id": "O4GKrfWSGb2b"
       },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "channels_last\n",
+            "Model: \"sequential_1\"\n",
+            "_________________________________________________________________\n",
+            " Layer (type)                Output Shape              Param #   \n",
+            "=================================================================\n",
+            " permute_1 (Permute)         (None, 84, 84, 4)         0         \n",
+            "                                                                 \n",
+            " conv2d_3 (Conv2D)           (None, 41, 41, 32)        1184      \n",
+            "                                                                 \n",
+            " activation_5 (Activation)   (None, 41, 41, 32)        0         \n",
+            "                                                                 \n",
+            " conv2d_4 (Conv2D)           (None, 20, 20, 64)        18496     \n",
+            "                                                                 \n",
+            " activation_6 (Activation)   (None, 20, 20, 64)        0         \n",
+            "                                                                 \n",
+            " conv2d_5 (Conv2D)           (None, 18, 18, 128)       73856     \n",
+            "                                                                 \n",
+            " activation_7 (Activation)   (None, 18, 18, 128)       0         \n",
+            "                                                                 \n",
+            " global_average_pooling2d_1   (None, 128)              0         \n",
+            " (GlobalAveragePooling2D)                                        \n",
+            "                                                                 \n",
+            " dense_2 (Dense)             (None, 512)               66048     \n",
+            "                                                                 \n",
+            " activation_8 (Activation)   (None, 512)               0         \n",
+            "                                                                 \n",
+            " dense_3 (Dense)             (None, 6)                 3078      \n",
+            "                                                                 \n",
+            " activation_9 (Activation)   (None, 6)                 0         \n",
+            "                                                                 \n",
+            "=================================================================\n",
+            "Total params: 162,662\n",
+            "Trainable params: 162,662\n",
+            "Non-trainable params: 0\n",
+            "_________________________________________________________________\n"
+          ]
+        }
+      ],
+      "source": [
+        "# Build our model.\n",
+        "input_shape = (WINDOW_LENGTH,) + INPUT_SHAPE\n",
+        "model = Sequential()\n",
+        "\n",
+        "print(K.image_data_format())\n",
+        "if K.image_data_format() == 'channels_last':\n",
+        "    # (width, height, channels)\n",
+        "    model.add(Permute((2, 3, 1), input_shape=input_shape))\n",
+        "elif K.image_data_format() == 'channels_first':\n",
+        "    # (channels, width, height)\n",
+        "    model.add(Permute((1, 2, 3), input_shape=input_shape))\n",
+        "else:\n",
+        "    raise RuntimeError('Unknown image_dim_ordering.')\n",
+        "\n",
+        "model.add(Convolution2D(32, (3, 3), strides=(2, 2)))\n",
+        "model.add(Activation('relu'))\n",
+        "model.add(Convolution2D(64, (3, 3), strides=(2, 2)))\n",
+        "model.add(Activation('relu'))\n",
+        "model.add(Convolution2D(128, (3, 3), strides=(1, 1)))\n",
+        "model.add(Activation('relu'))\n",
+        "#model.add(Flatten())\n",
+        "model.add(GlobalAveragePooling2D())\n",
+        "model.add(Dense(512))\n",
+        "model.add(Activation('relu'))\n",
+        "model.add(Dense(nb_actions))\n",
+        "model.add(Activation('linear'))\n",
+        "\n",
+        "model.summary()"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 8,
+      "metadata": {},
       "outputs": [],
-      "source": []
+      "source": [
+        "memory = SequentialMemory(limit=1000000, window_length=WINDOW_LENGTH)\n",
+        "\n",
+        "processor = AtariProcessor()"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 9,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# La policy más relevante de DQN\n",
+        "policy = LinearAnnealedPolicy(EpsGreedyQPolicy(), attr='eps',\n",
+        "                              value_max=1., value_min=.1, value_test=.05,\n",
+        "                              nb_steps=1000000)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 10,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "dqn = DQNAgent(model=model, nb_actions=nb_actions, policy=policy,\n",
+        "               memory=memory, processor=processor,\n",
+        "               nb_steps_warmup=50000, gamma=.99,\n",
+        "               target_model_update=10000, # esta congelada y se actualiza cada 10000\n",
+        "               train_interval=4)\n",
+        "\n",
+        "dqn.compile(Adam(learning_rate=.00025), metrics=['mae'])"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# Training part\n",
+        "weights_filename = 'dqn_{}_weights.h5f'.format(env_name)\n",
+        "checkpoint_weights_filename = 'dqn_' + env_name + '_weights_{step}.h5f'\n",
+        "log_filename = 'dqn_{}_log.json'.format(env_name)\n",
+        "\n",
+        "callbacks = [ModelIntervalCheckpoint(checkpoint_weights_filename, interval=250000)]\n",
+        "callbacks += [FileLogger(log_filename, interval=100)]\n",
+        "\n",
+        "dqn.fit(env, callbacks=callbacks, nb_steps=1750000, log_interval=10000, visualize=False)\n",
+        "# steps de entrenamiento\n",
+        "\n",
+        "dqn.save_weights(weights_filename, overwrite=True)"
+      ]
     },
     {
       "attachments": {},
@@ -406,7 +544,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.7.9"
+      "version": "3.9.16"
     }
   },
   "nbformat": 4,
