--- a/08MIAR_Proyecto_práctico.ipynb
+++ b/08MIAR_Proyecto_práctico.ipynb
@@ -524,6 +524,27 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Como podemos observar hay disponibles 6 acciones entre las que se encuentran el desplazamiento a izquierda y derecha o disparar.\n",
+    "\n",
+    "Además las observaciones del entorno son imágenes a color (3 canales) con intensidad de 0 a 255 y dimensión de 210 x 160 pixeles.\n",
+    "\n",
+    "Estas observaciones van a ser preprocesadas en la clase \"AtariProcessor\", que contiene los siguientes métodos:\n",
+    "- process_observation\n",
+    "    - En primer lugar se checkea que las imágenes tienen 3 canales, en caso contrario se emite un aviso.\n",
+    "    - Convertimos la variable BOX a PIL image.\n",
+    "    - Transformamos la imagen de RGB a gris con un tamaño 84x84 (viene por parámetro).\n",
+    "    - Transformamos el tipo de variable de PIL a numpy array.\n",
+    "- process_state_batch\n",
+    "    - Normalizamos la imagen con valores de 0 a 1.\n",
+    "- process_reward\n",
+    "    - Estandarizamos la recompensar, si es mayor mayor o menor de las cotas, se fija el valor en la cota correspondiente."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {
@@ -556,7 +577,7 @@
    },
    "source": [
     "---\n",
-    "### **MODELO 1**. GlobalAveragePooling2D y 2 Capas Densas"
+    "### **MODELO 1**. EpsGreedyQPolicy: GlobalAveragePooling2D y 2 Capas Densas"
    ]
   },
   {
@@ -564,7 +585,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1. Implementación de la red neuronal"
+    "1. Implementación de la red neuronal\n",
+    "\n",
+    "Se propone una red neuronal con 3 capas convolucionales cada vez más profundas, con diferentes <i>strides</i> para reducir la dimensionalidad, se hace uso de una capa <i>GlobalAveragePooling2D</i> para probar su funcionamiento y aplanar el vector resultante que se conecta con una capa densa de 512 neuronas, un dropout para comprobar su efectividad en aprendizaje por refuerzo y otra capa densa más pequeña antes de obtener el output.\n",
+    "\n",
+    "Es una red más compleja que la vista en clase para la práctica del juego \"Breakout\" pero entendemos que \"Space Invaders\" también es un juego más complejo que requerirá de un mejor procesado de las observaciones y el entorno. De hecho en este juego nuestro agente se tiene que enfrentar a unos enemigos que le disparan y tratan de eliminarlo de la partida y el juego original de Atari tenía un bug que hacía que la velocidad del juego se incrementara a medida que quedaban menos enemigos y la carga poligonal decrecía."
    ]
   },
   {
@@ -632,7 +657,7 @@
     "model.add(Convolution2D(64, (8, 8), strides=(4, 4), activation='relu'))\n",
     "model.add(Convolution2D(128, (4, 4), strides=(2, 2), activation='relu'))\n",
     "model.add(Convolution2D(256, (3, 3), strides=(1, 1), activation='relu'))\n",
-    "#model.add(Flatten())\n",
+    "\n",
     "model.add(GlobalAveragePooling2D())\n",
     "\n",
     "model.add(Dense(512, activation='relu'))\n",
@@ -641,6 +666,19 @@
     "model.add(Dense(nb_actions, activation='linear'))\n",
     "\n",
     "model.summary()"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Configuramos nuestro algoritmo DQN:\n",
+    "- Seguiremos una política E-greedy.\n",
+    "- Epsilon comenzará en 1 y finalizará el entrenamiento en 0,1.\n",
+    "- 50.000 steps de calentamiento para comenzar con información el entrenamiento.\n",
+    "- El modelo se actulizará cada 10.000 steps.\n",
+    "- Establecemos una gamma de 0,99."
    ]
   },
   {
@@ -1951,7 +1989,15 @@
     "id": "-NAlu8b1Gb2b"
    },
    "source": [
-    "3. Justificación de los parámetros seleccionados y de los resultados obtenidos"
+    "3. Justificación de los parámetros seleccionados y de los resultados obtenidos\n",
+    "\n",
+    "En este caso la configuración del algoritmo DQN ha seguido los pasos vistos en clase para la práctica 1, sin embargo se ha optado por cambiar la red neuronal casi por completo para experimentar con un modelo más complejo. Esto es debido a que \"Space Invaders\" es un juego complejo donde tienes que esquivar disparos, buscar coberturas (si aún quedan), saber cuando disparar a tus enemigos y además el juego se va acelerando cuando quedan pocos enemigos.\n",
+    "\n",
+    "En un principio consideramos que era importante sacar mucha información de las observaciones por lo que introdujimos capas convolucionales más profundas esperando detectar más patrones y características de las imágenes. Mantuvimos los \"strides\" en vez de usar \"Max Pooling\" simplemente buscando experimentar y cambiamos la capa \"Flatten\" por un \"Global Average Pooling\" por motivos similares, ya que nunca la habíamos usado a lo largo del máster. Finalmente optamos por dos capas densas buscando que el modelo supiese adaptarse mejor al entorno, entendiendo que una única capa podría ser insuficiente y más capas añadirían demasiada complejidad y tardaría más en entrenarse el modelo. Además añadiendo una segunda capa podíamos seguir experimentando incluyendo una capa \"Dropout\" para evitar un posible sobreajuste y añadir robustez a la red.\n",
+    "\n",
+    "En cuanto al algoritmo DQN utilizado se ha optado por una politica E-Greedy partiendo de un epsilon de 1 apostando por la exploración durante buena parte del entrenamiento para que nuestro agente pruebe distintas estrategias. Almacenamos información de 10.000 steps antes de que el modelo se actualice ya que en este tipo de algoritmos es importante tener una gran cantidad de información para actualizar la policy. Por último dejamos una gamma elevada (0,99) para dar mucho valor a la recompensa a futuro.\n",
+    "\n",
+    "Los resultados obtenidos como se ha comentado anteriormente son satisfactorios para el modelo obtenido con 1,5 millones de épocas. Si bien podría mejorar para ser más estable, ya que observando el comportamiento del agente en test, en ocasiones realiza comportamientos extraños como quedarse parado sin cubrirse. Teniendo en cuenta que en las puntuaciones más altas el agente es capaz de pasar el primer nivel, da la sensación de que en ocasiones no interpreta bien el entorno y no ve los disparos. Por lo tanto podrían probarse otras redes convolucionales u otros preprocesados de imágen. Cabe destacar que cargando los pesos obtenidos en épocas posteriores el rendimiento del modelo cae en picado."
    ]
   },
   {
@@ -1962,7 +2008,7 @@
    },
    "source": [
     "---\n",
-    "### **MODELO 2**. MaxPooling2D y solo una Capa Densa"
+    "### **MODELO 2**. BoltzmannQPolicy: MaxPooling2D y solo una Capa Densa"
    ]
   },
   {
@@ -2699,9 +2745,7 @@
    "source": [
     "3. Justificación de los parámetros seleccionados y de los resultados obtenidos\n",
     "\n",
-    "En este trabajo, hemos explorado diferentes estrategias de resolución del problema y hemos analizado sus ventajas e inconvenientes. En nuestra aproximación, nos hemos inspirado en los conceptos vistos en clase para abordar el desafío. Para comprender mejor las decisiones tomadas al parametrizar nuestro modelo, es importante comprender cómo se desarrolla el juego.\n",
-    "\n",
-    "Las mayores recompensas se obtienen al eliminar la mayor cantidad posible de enemigos, los cuales se mueven constantemente y disparan. Consideramos que utilizar solo una ventana de 4 imágenes no sería suficiente para captar información sobre la dirección de movimiento de los enemigos, si están descendiendo o si están disparando. Por lo tanto, decidimos utilizar una línea temporal más larga para tener una mejor perspectiva y mejorar nuestras predicciones.\n",
+    "Consideramos que utilizar solo una ventana de 4 imágenes no sería suficiente para captar información sobre la dirección de movimiento de los enemigos, si están descendiendo o si están disparando. Por lo tanto, decidimos utilizar una línea temporal más larga para tener una mejor perspectiva y mejorar nuestras predicciones.\n",
     "\n",
     "En cuanto a la selección de la política de acción, optamos por la BoltzmannQPolicy con un valor de tau de 0.2. Un valor más alto de tau haría que las acciones se seleccionen de manera más aleatoria, mientras que un valor más bajo daría más prioridad a las acciones prometedoras. No queríamos tomar decisiones demasiado aleatorias y preferimos dar más importancia a las acciones que se consideran más prometedoras. Dado que no estamos tratando con un entorno que tiene una gran cantidad de acciones posibles, no necesitamos explorar de manera exhaustiva.\n",
     "\n",
@@ -2724,7 +2768,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "En este trabajo, hemos explorado diferentes estrategias de resolución del problema y procedemos a analizar sus ventajas e inconvenientes así como propuestas de mejora. En nuestra aproximación, nos hemos inspirado en los conceptos vistos en clase para abordar el desafío.\n",
     "\n",
+    "El mayor impacto negativo en los resultados se obtiene cuando se configura erróneamente nuestro algoritmo DQN. Parámetros como la gamma o el número de steps con los que se actualizará el modelo tienen una gran influencia.\n",
+    "\n",
+    "Propuestas para futuras pruebas:\n",
+    "Preprocesar la imagen de una forma distinta.\n",
+    "\n",
+    "\n",
+    "Para comprender mejor las decisiones tomadas al parametrizar nuestro modelo, es importante comprender cómo se desarrolla el juego. Las mayores recompensas se obtienen al eliminar la mayor cantidad posible de enemigos, los cuales se mueven constantemente y disparan. \n",
     "\n",
     "---"
    ]
